--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,13 +6,11 @@
 
 {% block content %}
   <div>
-    <h1 class="center">Welcome to Feedfront</h1>
-    <p class="center">Powered by Django</p>
+    <h1 class="center">Welcome to QuizApp</h1>
     <br>
-    <br>
-    <p class="center">Please fill a short feedback for us</p>
+    <p class="center">Register with your details to enter the survey</p>
     <p class="center">
-      <a class="btn btn-primary btn-md" href="{% url 'feedback' %}" role="button">Begin</a>
+      <a class="btn btn-primary btn-md" href="{% url 'register' %}" role="button">Register</a>
     </p>
   </div>
 
