Update home template

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div>
-    <h1 class="center">Welcome to QuizApp</h1>
+    <h1 class="center">Welcome to FeedFront</h1>
     <br>
     <p class="center">Register with your details to enter the survey</p>
     <p class="center">
