--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -25,7 +25,7 @@
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right" style="padding-right: 30px;">
-                    <li><a href="/register">Play</a></li>
+                    <li><a href="/register">Participate</a></li>
                     <li><a href="/about">About</a></li>
                 </ul>
             </div>
