--- a/core/templates/core/feedback_submitted.html
+++ b/core/templates/core/feedback_submitted.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title%}
-  S
+  Download
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
     <h1 class="center">Thank you for participating!</h1>
     <p class="center">Your feedback has been submitted. Download the feedback as a JSON file.</p>
       <p class="center">
-        <a class="btn btn-primary btn-md" href="{% url 'download' %}" role="button">Download</a>
+        <a class="btn btn-primary btn-md" href="{% url 'download' %}" download>Download</a>
       </p>
     </form>
   </div>
